--- a/lab01-html-css/parte1/parte1.html
+++ b/lab01-html-css/parte1/parte1.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="./lab01.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lab 01 - parte 1</title>
+  <link rel="stylesheet" href="./parte1.css" />
 </head>
 <body>
   <main>
