parte 2 com galeria e curiosidades

--- a/lab01-html-css/parte2/parte2.html
+++ b/lab01-html-css/parte2/parte2.html
@@ -12,18 +12,64 @@
         <h1>São Luís</h1>
         <p>Tudo sobre a ilha do amor</p>
       </header>
-      <section>
-        <h3>População</h3>
-        <p>1,109 milhão</p>
-        <p>2020</p>
-      </section>
-      <section>
-        <h3>Imagem</h3>
-        <img src="../assets/wal.jpg" alt="saoluiswalpaper" />
-      </section>
-      <section>
-        <h3>Curiosidades</h3>
-      </section>
+
+      <div class="sections">
+        <section>
+          <h3>Um breve resumo</h3>
+          <p id="resumo">
+            São Luís é uma cidade no nordeste do Brasil, na ilha de São Luís, no
+            Oceano Atlântico. No centro histórico da cidade encontra-se o bairro
+            de Praia Grande, na área circundante da rua de Portugal, marcado por
+            edifícios coloniais com azulejos distintos e varandas em ferro
+            fundido. O Palácio dos Leões, onde reside o governador do estado,
+            exibe arte e mobiliário franceses. Nas proximidades, encontra.se o
+            grande Palácio La Ravardière, do século XVII.
+          </p>
+        </section>
+
+        <section>
+          <h3>População</h3>
+          <p id="populacao">1,109 milhão</p>
+        </section>
+        <section>
+          <h3>Galeria</h3>
+          <div class="galeria">
+            <img src="../assets/wal.jpg" alt="saoluiswalpaper" />
+            <img src="../assets/slz.jpg" alt="slz" />
+          </div>
+        </section>
+        <section>
+          <h3>Curiosidades</h3>
+          <div id="cards">
+            <div>
+              <h4>
+                São Luís é a única capital brasileira que não nasceu lusitana
+              </h4>
+              <p>
+                São Luís foi fundada em 8 de setembro de 1612 pelos franceses.
+                Em 1614 os portugueses ganharam a batalha de Guaxenduba
+                expulsaram os fundadores. De 1641 a 1644 os holandeses ocuparam
+                a cidade. Mais umas vezes os portugueses ganharam a briga e é
+                por isso que não falamos francês nem somos loiros holandeses por
+                aqui.
+              </p>
+            </div>
+
+            <div>
+              <h4>
+                São Luís possui uma das maiores variações de maré do mundo
+              </h4>
+              <p>
+                Essa é a curiosidade sobre São Luís que mais deixa deixa os
+                turistas impressionados e confusos quando visitam o Maranhão! A
+                cada (quase) 12h um ciclo de maré ocorre em São Luís. A variação
+                média é entre 5 e 6 metros. Isso é muito. Para você ter uma
+                noção, em João Pessoa a maré varia cerca de 2 metros.
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
   </body>
 </html>
